Move card specific stuff to acr122 module