@@ -18,6 +18,9 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <javafx.version>16</javafx.version>
+
+        <!-- Placeholders to be customized by child projects -->
+        <extra-jvm-options-when-running-tests></extra-jvm-options-when-running-tests>
     </properties>
 
     <dependencyManagement>
@@ -115,8 +118,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
-                        --add-opens pl.marcinchwedczuk/pl.marcinchwedczuk.rfid.xml=ALL-UNNAMED
-                        --add-opens pl.marcinchwedczuk/pl.marcinchwedczuk.rfid.acr122=ALL-UNNAMED
+                        ${extra-jvm-options-when-running-tests}
                     </argLine>
                 </configuration>
                 <dependencies>
